# WayWiseR

./: .gitignore  .gitmodules  README.md
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: build.yaml
ros2-waywise/: CMakeLists.txt  package.xml
ros2-waywise_description/: CMakeLists.txt  package.xml
ros2-waywise_description/urdf/: camera.xacro  depth_camera.xacro  gazebo_ackermann_control.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
ros2-waywise_gazebo/: CMakeLists.txt  README.md  package.xml
ros2-waywise_gazebo/config/: ros_gazebo_bridges.yaml
ros2-waywise_gazebo/launch/: gazebo.launch.py  gazebo_rviz.launch.py
ros2-waywise_gazebo/worlds/: car_world.sdf
ros2-waywise_hwbringup/: CMakeLists.txt  README.md  package.xml
ros2-waywise_hwbringup/config/: lidar.yaml  rover.yaml
ros2-waywise_hwbringup/launch/: rover.launch.py  rover_launch.py
ros2-waywise_hwbringup/src/: twist_to_ackermann.cpp
ros2-waywise_localization/: CMakeLists.txt  package.xml
ros2-waywise_localization/config/: ekf.yaml
ros2-waywise_localization/launch/: ekf.launch.py
ros2-waywise_node/: CMakeLists.txt  package.xml
ros2-waywise_node/src/: waywise_rover.cpp
ros2-waywise_rviz2/: CMakeLists.txt  README.md  package.xml
ros2-waywise_rviz2/launch/: rviz.launch.py
ros2-waywise_rviz2/rviz/: odom_reference_frame.rviz  rviz_display_config.rviz
ros2-waywise_slam/: CMakeLists.txt  README.md  package.xml
ros2-waywise_slam/config/: slam.yaml
ros2-waywise_slam/launch/: slam.launch.py
ros2-waywise_teleop/: CMakeLists.txt  README.md  package.xml
ros2-waywise_teleop/config/: joy_teleop.yaml  teleop.yaml  twist_mux.yaml
ros2-waywise_teleop/launch/: teleop.launch.py
ros2-waywise_teleop/src/: teleop_gateway.cpp
waywiser/: CMakeLists.txt  README.md  package.xml
waywiser/discovery/: client_setup.sh  local_client.xml  local_server.xml  remote_client.xml  remote_server.xml  server_setup.sh
waywiser/launch/: gazebo_slam.launch.py  gazebo_slam_nav2.launch.py  hwbringup_minimal.launch.py  hwbringup_slam.launch.py  hwbringup_slam_nav2_path_follower.launch.py  teleop_rviz2.launch.py
waywiser_command_control/: CMakeLists.txt  README.md  package.xml
waywiser_command_control/config/: command_control.yaml
waywiser_command_control/launch/: command_control.launch.py
waywiser_command_control/src/rclcpp_components/: emergency_stop_monitor_core.cpp
waywiser_description/: CMakeLists.txt  package.xml
waywiser_description/sdf/actor_stand/: model.sdf  stand.dae
waywiser_description/sdf/actor_walk/: model.sdf
waywiser_description/sdf/drone/: model.sdf
waywiser_description/sdf/realsense_d435i_camera/: model.sdf
waywiser_description/urdf/: camera.xacro  depth_camera.xacro  gazebo_ackermann_control.xacro  imu.xacro  lidar.xacro  realsense_d435i_camera.xacro  robot.urdf.xacro  robot_core.xacro
waywiser_gazebo/: CMakeLists.txt  README.md  package.xml
waywiser_gazebo/config/: ros_gazebo_bridges.yaml
waywiser_gazebo/launch/: gazebo.launch.py  spawn.launch.py
waywiser_gazebo/worlds/: bounded_world.sdf  car_world.sdf
waywiser_hwbringup/: CMakeLists.txt  README.md  package.xml
waywiser_hwbringup/config/: lidar.yaml  realsense_d435i_camera.yaml  rover.yaml
waywiser_hwbringup/include/: point_cloud_transformer.hpp
waywiser_hwbringup/launch/: realsense_d435i.launch.py  rover.launch.py  waywise_autopilot.launch.py
waywiser_nav2/: CMakeLists.txt  README.md  package.xml
waywiser_nav2/behaviour_trees/: navigate_through_poses_w_replan_recover.xml  navigate_through_poses_w_replan_smooth_recover.xml  navigate_to_pose_w_replan_recover.xml  navigate_to_pose_w_replan_smooth_recover.xml
waywiser_nav2/config/: nav2.yaml  nav2_params_modified_humble.yaml
waywiser_nav2/launch/: nav2.launch.py  nav2_bringup_all.launch.py  nav2_path_follower.launch.py  nav2_path_planner.launch.py  nav2_waypoint_navigator.launch.py
waywiser_node/: CMakeLists.txt  package.xml
waywiser_node/src/: waywise_autopilot.cpp  waywise_rover.cpp
waywiser_perception/: CMakeLists.txt  README.md  package.xml
waywiser_perception/config/: yolov8.yaml
waywiser_perception/cpp_src/: point_cloud_transformer.cpp
waywiser_perception/cpp_src/rclcpp_components/: point_cloud_transformer_core.cpp
waywiser_perception/include/: point_cloud_transformer.hpp
waywiser_perception/launch/: realsense_xyzrgb_pointcloud.launch.py  yolov8.launch.py
waywiser_perception/msg/: BoundingBox.msg  Detection.msg  DetectionArray.msg
waywiser_perception/py_scripts/: yolov8_node.py
waywiser_rviz2/: CMakeLists.txt  README.md  package.xml
waywiser_rviz2/launch/: rviz.launch.py
waywiser_rviz2/rviz/: map_reference_frame.rviz  map_reference_frame_nav2.rviz  odom_reference_frame.rviz
waywiser_slam/: CMakeLists.txt  README.md  package.xml
waywiser_slam/config/: slam.yaml
waywiser_slam/launch/: slam.launch.py
waywiser_teleop/: CMakeLists.txt  README.md  package.xml
waywiser_teleop/config/: teleop.yaml
waywiser_teleop/include/: emergency_stop_monitor.hpp
waywiser_teleop/launch/: teleop.launch.py
waywiser_teleop/py_scripts/: twist_keyboard.py
waywiser_teleop/src/: emergency_stop_monitor.cpp  joy_emergency_stop.cpp  teleop_gateway.cpp  twist_angular_correction.cpp
waywiser_teleop/src/rclcpp_components/: emergency_stop_monitor_core.cpp
waywiser_twist_safety/: CMakeLists.txt  README.md  package.xml
waywiser_twist_safety/config/: twist_safety.yaml
waywiser_twist_safety/include/: emergency_stop_monitor.hpp
waywiser_twist_safety/launch/: command_control.launch.py  twist_safety.launch.py
waywiser_twist_safety/src/: emergency_stop_monitor.cpp
waywiser_twist_safety/src/rclcpp_components/: emergency_stop_monitor_core.cpp
