<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2-waywise_description</name>
  <version>0.0.0</version>
  
  <description>Robot models and sensors are defined by URDF files</description>

  <author>Rickard Häll</author>
  <author>Ramana Avula</author>
  
  <maintainer email="rickard.hall@ri.se">Rickard Häll</maintainer>
  <maintainer email="ramana.reddy.avula@ri.se">Ramana Avula</maintainer>
  
  <license>TODO: License declaration</license>

  <url type="website">http://wiki.ros.org/urdf/XML/link</url>
  <url type="website">http://docs.ros.org/en/humble/Tutorials/Intermediate/URDF/URDF-Main.html</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
