<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2-waywise_node</name>
  <version>0.0.0</version>
  
  <description>Package wraps WayWise in a ROS2 node</description>

  <author>Marvin Damschen</author>
  <author>Ramana Avula</author>
  
  <maintainer email="marvin.damschen@ri.se">Marvin Damschen</maintainer>
  <maintainer email="ramana.reddy.avula@ri.se">Ramana Avula</maintainer>
  
  <license>TODO: License declaration</license>

  <url type="website">https://github.com/RISE-Dependable-Transport-Systems/WayWise</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
