<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waywiser_gazebo</name>
  <version>0.0.0</version>
  
  <description>Initiates Gazebo world, generates robot and establishes communication link between ROS2 and Gazebo</description>

  <author>Rickard Häll</author>
  <author>Ramana Avula</author>
  
  <maintainer email="rickard.hall@ri.se">Rickard Häll</maintainer>
  <maintainer email="ramana.reddy.avula@ri.se">Ramana Avula</maintainer>
  
  <license>TODO: License declaration</license>

  <url type="website">https://gazebosim.org/docs/fortress/install</url>
  <url type="website">https://gazebosim.org/docs/fortress/tutorials</url>
  <url type="website">http://sdformat.org/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
