<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waywiser_nav2</name>
  <version>0.0.0</version>

  <description>Package that provides dynamic path planning for waywiser using Nav2</description>

  <maintainer email="rickard.hall@ri.se">Rickard Häll</maintainer>
  <maintainer email="ramana.reddy.avula@ri.se">Ramana Avula</maintainer>

  <license>TODO: License declaration</license>

  <url type="website">https://github.com/ros-planning/navigation2/tree/humble</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
