<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waywiser_slam</name>
  <version>0.0.0</version>

  <description>Package that supports mapping and localization with rviz2</description>

  <maintainer email="ramana.reddy.avula@ri.se">Ramana Avula</maintainer>
  
  <license>TODO: License declaration</license>

  <url type="website">https://wiki.ros.org/rviz</url>
  <url type="website">https://github.com/SteveMacenski/slam_toolbox/tree/humble</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>slam_toolbox</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
