<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waywiser_teleop</name>
  <version>0.0.0</version>
  
  <description>Package that processes keyboard and joystick inputs</description>

  <author>Ramana Avula</author>
  
  <maintainer email="ramana.reddy.avula@ri.se">Ramana Avula</maintainer>
  
  <license>TODO: License declaration</license>

  <url type="website">https://github.com/ros2/teleop_twist_keyboard/</url>
  <url type="website">https://github.com/ros2/teleop_twist_joy/tree/humble</url>
  <url type="website">http://wiki.ros.org/twist_mux</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>joy</exec_depend> 
  <exec_depend>teleop_twist_joy</exec_depend> 
  <exec_depend>twist_mux</exec_depend> 
  <exec_depend>teleop_twist_keyboard</exec_depend> 
  <exec_depend>xterm</exec_depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
