<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waywiser_teleop</name>
  <version>0.0.0</version>

  <description>Package that processes keyboard and joystick inputs</description>

  <maintainer email="ramana.reddy.avula@ri.se">Ramana Avula</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/ros2/teleop_twist_keyboard/</url>
  <url type="website">https://github.com/ros2/teleop_twist_joy/tree/humble</url>
  <url type="website">http://wiki.ros.org/twist_mux</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>twist_mux</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>xterm</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
